--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://<tu-nombre-de-usuario>.github.io/<tu-repo>",
+  "homepage": "https://<lucybits>.github.io/<swatchme>",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
